Add data.table package import and update tests***
***Update mapCell2Accession function documentation***

***Add common_cellosaurus_fields and cellosaurus_extResources tests***

***Update Cellosaurus vignette with examples***

***Refactor code in vignette to improve readability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getPubchemCompound)
 export(mapCell2Accession)
 export(standardize_names)
 import(BiocParallel)
+import(data.table)
 importFrom(checkmate,assert)
 importFrom(checkmate,assert_atomic)
 importFrom(checkmate,assert_choice)
