--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -45,6 +45,34 @@ jobs:
         with:
           upload-snapshots: true
 
+  Test-Docker-Build:
+    # needs: R-CMD-check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Get TAG from DESCRIPTION
+        run: |
+          TAG=$(grep  'Version:' DESCRIPTION  | grep -oE '[0-9]+(\.[0-9]+)*')
+          echo "TAG=$TAG" >> $GITHUB_ENV
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Test Docker Build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          file: ./Dockerfile
+          push: false
+
   Code-Coverage:
     runs-on: ubuntu-latest
     env:
@@ -85,6 +113,8 @@ jobs:
         with:
           name: coverage-test-failures
           path: ${{ runner.temp }}/package
+
+      
 
   Upload-Docker:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/newAnnotationGx'
