--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AnnotationGx
 Title: AnnotationGx: A package for building, updating and querying an
     annotation database for pharmaco-genomic data
-Version: 0.0.0.9071
+Version: 0.0.0.9073
 Authors@R: c(
     person("Jermiah", "Joseph", role = c("aut", "cre"),
         email = "jermiah.joseph@gmail.com"),
@@ -33,6 +33,8 @@ Suggests:
     knitr,
     rmarkdown
 Config/testthat/edition: 3
+Config/testthat/parallel: true
+Config/testthat/start-first: watcher, parallel*
 License: GPL (>= 3) + file LICENSE
 LazyData: true
 VignetteBuilder: knitr
