--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,15 @@ export(getChemblResourceFields)
 export(getPubchemAnnotationHeadings)
 export(getPubchemCompound)
 export(mapCell2Accession)
+export(mapCompound2CID)
 export(standardize_names)
 import(BiocParallel)
 import(data.table)
 importFrom(checkmate,assert)
 importFrom(checkmate,assert_atomic)
 importFrom(checkmate,assert_choice)
+importFrom(checkmate,assert_integerish)
 importFrom(checkmate,assert_logical)
+importFrom(checkmate,test_atomic)
 importFrom(checkmate,test_choice)
 importFrom(data.table,":=")
