Add mapCompound2CID function and update documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(getPubchemAnnotationHeadings)
 export(getPubchemCompound)
 export(getPubchemStatus)
 export(mapCell2Accession)
+export(mapCompound2CID)
 export(standardize_names)
 import(BiocParallel)
 import(data.table)
