--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(getChemblMechanism)
 export(getChemblResourceFields)
 export(getPubchemAnnotationHeadings)
 export(getPubchemCompound)
+export(getPubchemProperties)
 export(getPubchemStatus)
+export(mapCID2Properties)
 export(mapCell2Accession)
 export(mapCompound2CID)
 export(standardize_names)
