Add oncotree code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(annotatePubchemCompound)
 export(getChemblMechanism)
 export(getChemblResourceFields)
+export(getOncotreeMainTypes)
+export(getOncotreeTumorTypes)
+export(getOncotreeVersions)
 export(getPubchemAnnotationHeadings)
 export(getPubchemCompound)
 export(getPubchemProperties)
