Update package version and add new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ export(getPubchemAnnotationHeadings)
 export(getPubchemCompound)
 export(getPubchemProperties)
 export(getPubchemStatus)
+export(getUnichemSources)
 export(mapCID2Properties)
 export(mapCell2Accession)
 export(mapCompound2CID)
+export(queryUnichem)
 export(standardize_names)
 import(BiocParallel)
 import(data.table)
