Update Vignettes and Package Structure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,11 @@ importFrom(checkmate,assert_logical)
 importFrom(checkmate,test_atomic)
 importFrom(checkmate,test_choice)
 importFrom(data.table,":=")
+importFrom(data.table,.BY)
+importFrom(data.table,.EACHI)
+importFrom(data.table,.GRP)
+importFrom(data.table,.I)
+importFrom(data.table,.N)
+importFrom(data.table,.NGRP)
+importFrom(data.table,.SD)
+importFrom(data.table,data.table)
