Update AnnotationGx package: fix function names and update package documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ export(mapCID2Properties)
 export(mapCell2Accession)
 export(mapCompound2CID)
 export(queryChemblAPI)
-export(queryUnichem)
+export(queryUnichemCompound)
 export(standardize_names)
 import(BiocParallel)
 import(data.table)
