--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,13 @@ url: https://bhklab.github.io/AnnotationGx/
 template:
   bootstrap: 5
 
+articles:
+- title: Articles
+  navbar: ~
+  contents:
+  - Introduction
+  - Cellosaurus
+  - ChEMBL
+  - OncoTree
+  - PubChemAPI
+  - Unichem
