more robust cellosaurus mapping. Need to add tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AnnotationGx
 Title: AnnotationGx: A package for building, updating and querying an
     annotation database for pharmaco-genomic data
-Version: 0.0.0.9083
+Version: 0.0.0.9084
 Authors@R: c(
     person("Jermiah", "Joseph", role = c("aut", "cre"),
         email = "jermiah.joseph@gmail.com"),
@@ -25,6 +25,7 @@ Imports:
     options,
     BiocParallel,
     readr,
+    pipette (>= 0.15.2),
     tibble,
     xml2
 Suggests: 
@@ -36,6 +37,7 @@ Suggests:
     BiocStyle,
     RefManageR,
     sessioninfo
+Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Config/testthat/start-first: watcher, parallel*
