Delete unnecessary files and update package version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(matchNested)
 export(queryChemblAPI)
 export(queryUnichemCompound)
 export(standardize_names)
+export(strSplit)
 export(unlistNested)
 exportMethods(matchNested)
 import(BiocParallel)
