--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(getUnichemSources)
 export(mapCID2Properties)
 export(mapCell2Accession)
 export(mapCompound2CID)
+export(mapCompound2CTD)
 export(matchNested)
 export(queryChemblAPI)
 export(queryUnichemCompound)
