docs: test pkg_down

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,3 +12,11 @@ articles:
   - OncoTree
   - PubChemAPI
   - Unichem
+
+pipelines:
+- title: Pipelines
+  navbar: ~
+  contents:
+  - CTRP-Treatment-Annotation
+  - sample_pipeline
+  - treatment_pipeline
