--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -4,10 +4,8 @@ on:
   push:
     branches: [main, master]
   pull_request:
-    branches: [main, master]
-  release:
-    types: [published]
-  workflow_dispatch:
+    branches: [main, master, development]
+
 
 name: pkgdown
 
