Update treatment annotations and merge with GDSC API results

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,7 +13,7 @@ articles:
   - Introduction
 
 - title: Articles
-  navbar: Articles
+  navbar: Databases
   contents:
   - Cellosaurus
   - ChEMBL
