Update package version and add memoise dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AnnotationGx
 Title: AnnotationGx: A package for building, updating and querying an
     annotation database for pharmaco-genomic data
-Version: 0.0.0.9094
+Version: 0.0.0.9095
 Authors@R: c(
     person("Jermiah", "Joseph", role = c("aut", "cre"),
         email = "jermiah.joseph@gmail.com"),
@@ -23,7 +23,8 @@ Imports:
     httr2,
     data.table,
     readr,
-    xml2
+    xml2,
+    memoise
 Suggests: 
     testthat (>= 3.0.0),
     covr,
