docs: Started AnnotationStandards documentation

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -118,5 +118,6 @@ articles:
 - title: Pipelines
   navbar: Pipeline Tutorials
   contents:
+  - articles/AnnotationStandards
   - articles/CTRP-Treatment-Annotation
 
